full-moon/tests/cases/fail/parser/do-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/do-2
---
error[ast]: expected `end` to close block
  ┌─ source.lua:1:4
  │
1 │ do until end
  │    ^^^^^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:4
  │
1 │ do until end
  │    ^^^^^


